--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   }
 }
